# Soul

./: CMakeLists.txt  README.md  debug.h  main.cpp
autoaim/: CMakeLists.txt  autoaim.cpp  autoaim.h
autoaim/predictor/: predictor.h
buff/: CMakeLists.txt  buff.h  fan_tracker.h
buff/predictor/: predictor.cpp  predictor.h
camera/: DaHengCamera.cpp  DaHengCamera.h
coordsolver/: coordsolver.cpp  coordsolver.h
general/: general.cpp  general.h
serial/: CRC_Check.cpp  CRC_Check.h  serial.cpp  serial.h
thread/: thread.cpp  thread.h
